fixed chevron effect and container scroll

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 html {
   background-color: black;
+  overflow-x: hidden;
 }
 
 button {
@@ -17,14 +18,9 @@ button {
 }
 
 .chevron-btn {
-  @apply z-10 shadow hover:block;
+  @apply absolute top-1/2 -translate-y-1/2 z-10 bg-black/50 hover:bg-black/70 text-white p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300;
 }
 
-.hideScroll::-webkit-scrollbar {
+.scrollbar-hide::-webkit-scrollbar {
   display: none;
-}
-
-.hideScroll {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 }
