--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,19 @@ button {
 }
 
 .btn {
-  @apply flex items-center justify-center gap-2 px-4 py-2 font-semibold rounded sm:px-6;
+  @apply flex items-center justify-center gap-2 px-4 md:px-6 py-1.5 md:py-2 text-sm sm:text-lg font-semibold rounded;
 }
 
 .sound-btn {
-  @apply absolute bottom-15 right-5 sm:right-15 p-3 bg-transparent border text-white rounded-4xl hover:bg-stone-800;
+  @apply bg-neutral-800/60 hover:bg-neutral-700/80 text-white p-2 md:p-4 rounded-full border border-neutral-600/50 transition-colors duration-200 backdrop-blur-sm;
 }
 
 .chevron-btn {
-  @apply absolute top-1/2 -translate-y-1/2 z-10 bg-black/50 hover:bg-black/70 text-white p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300;
+  @apply absolute top-1/2 -translate-y-1/2 z-10  bg-black/50 hover:bg-black/70 text-white px-2 h-full opacity-0 group-hover:opacity-100 transition-opacity duration-300;
+}
+
+.control-btn {
+  @apply border p-2 rounded-2xl;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
