--- a/src/index.css
+++ b/src/index.css
@@ -14,17 +14,13 @@ button {
 }
 
 .sound-btn {
-  @apply bg-neutral-800/60 hover:bg-neutral-700/80 text-white p-2 md:p-4 rounded-full border border-neutral-600/50 transition-colors duration-200 backdrop-blur-sm;
-}
-
-.chevron-btn {
-  @apply absolute top-1/2 -translate-y-1/2 z-10  bg-black/50 hover:bg-black/70 text-white px-2 h-full opacity-0 group-hover:opacity-100 transition-opacity duration-300;
+  @apply bg-neutral-800/60 hover:bg-neutral-700/80  text-white p-2 md:p-4 rounded-full border border-neutral-600/50 transition-colors duration-200 backdrop-blur-sm;
 }
 
 .control-btn {
-  @apply border p-2 rounded-2xl;
+  @apply p-1 sm:p-2 bg-neutral-800 rounded-full hover:bg-neutral-700;
 }
 
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
+@utility no-scrollbar {
+  @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
 }
